<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="shared_element_container_category"
        android:fitsSystemWindows="true"
        android:background="@color/colorBackground"
        tools:context=".ui.fragment.DetailsFragment">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppBarLayoutTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:title="@string/dot_loading"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginStart="10dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/bg_1"
                    app:layout_collapseMode="parallax"/>
                <View
                    android:layout_gravity="bottom"
                    android:background="@drawable/scrim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>





















        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp">

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@id/card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:id="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/progressBar">


                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:cardElevation="4dp"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/textCategory"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingTop="14dp"
                                    android:paddingRight="14dp"
                                    android:text="@string/category"
                                    android:textColor="@color/colorPrimaryDark" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/category"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingTop="5dp"
                                    android:paddingRight="14dp"
                                    android:paddingBottom="14dp"
                                    android:text="@string/dot_loading"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="16sp" />
                            </LinearLayout>






                        </com.google.android.material.card.MaterialCardView>


                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:cardElevation="4dp"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/Country"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingTop="14dp"
                                    android:paddingRight="14dp"
                                    android:text="@string/country"
                                    android:textColor="@color/colorPrimaryDark" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/country"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingTop="5dp"
                                    android:paddingRight="14dp"
                                    android:paddingBottom="14dp"
                                    android:text="@string/dot_loading"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/instruction_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:drawableEnd="@drawable/ic_baseline_info"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/instructions"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card" />


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp"
                        android:elevation="4dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintBottom_toTopOf="@id/barrier2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/instruction_text">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/instructions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="15dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="15dp"
                            android:text="@string/dot_loading"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp" />
                    </com.google.android.material.card.MaterialCardView>

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="top"
                        tools:layout_editor_absoluteY="216dp" />








                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/roaa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:cardCornerRadius="10dp"
                            android:elevation="4dp"
                            app:cardUseCompatPadding="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/barrier2"
                            app:layout_constraintBottom_toBottomOf="parent"
                           >


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/lolo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/ingredients"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="14dp"
                                    android:paddingEnd="14dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/Ingredients"
                                    android:textColor="@color/colorPrimaryDark"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:weightSum="2"
                                    app:layout_constraintBottom_toBottomOf="@id/lolo"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/ingredients">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/ingredient"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:paddingStart="14dp"
                                        android:paddingEnd="14dp"
                                        android:textColor="@color/colorPrimaryText"
                                        android:textSize="16sp" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/measure"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:paddingStart="14dp"
                                        android:paddingEnd="14dp"
                                        android:textColor="@color/colorPrimaryText"
                                        android:textSize="16sp" />
                                </androidx.appcompat.widget.LinearLayoutCompat>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>




                </androidx.constraintlayout.widget.ConstraintLayout>









        </androidx.core.widget.NestedScrollView>





        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/fab"
            android:src="@drawable/ic_play_arrow"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@color/colorWhite"
            app:fabSize="normal"
            app:layout_anchor="@+id/app_bar"
            app:elevation="12dp"
            app:layout_anchorGravity="bottom|right|end"
            tools:ignore="ContentDescription" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
